--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -332,7 +332,7 @@
         bottom: 60px;
         right: 50px;
     }
-    button{
+    .scrToTopBtn{
         border: none;
         background-color: transparent;
         border-radius: 50px;
