--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -41,6 +41,19 @@
 
             @include md{
                 font-size: 24px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+
+            .backToHome{
+                padding: 8px 10px;
+                color: white;
+                border: 2px solid #9401ca;
+                background-color: #9401ca;
+                cursor: pointer;
+                border-radius: 8px;
+                margin-right: 30px;
             }
         }
 
